cluster/apps/tools/changedetection.io/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tools
  name: changedetection
spec:
  selector:
    matchLabels:
      app: changedetection
  replicas: 1
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
      - name: changedetection
        image: dgtlmoon/changedetection.io:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /datastore
          name: changedetection-data
      volumes:
      - name: changedetection-data
        persistentVolumeClaim:
          claimName: changedetection-data
