cluster/apps/tools/changedetection.io/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: tools
  name: changedetection
  labels:
    app: changedetection
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: changedetection
